[package]
name = "portable_appliance_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = {version = "^1", features = ["derive"]}
aws-config = "^0.54"
aws-sdk-config = "0.24"
aws-sdk-dynamodb = "0.24"
env_logger = "0.10.0"
strum = {version = "^0.24", features = ["derive"]}
strum_macros = "0.24"
derive_more = "^0.99"
log = "^0.4"
chrono = {version = "^0.4", features = ["serde"]}
